--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "csvtojson": "^2.0.10",
     "next": "14.2.4",
     "react": "^18",
-    "react-dom": "^18",
-    "swr": "^2.2.5"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@biomejs/biome": "1.8.3",
