--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "biome format --write ./src"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.3.1",
     "csvtojson": "^2.0.10",
     "next": "14.2.4",
     "react": "^18",
